# symbiont-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  run-dev.sh  start_containers.sh
.github/workflows/: docker-image.yml  gcp-artifact-regirsty.yml  gcp-staging-artifact-regirsty.yml
scripts/: delete_pinecone_vecs.py  extract_todos.py
src/: main.py
symbiont/: Dockerfile  __init__.py  delete_namespace.sh  docker-compose.yml  main.py  models.py  test_upload_resource.sh
symbiont/fb/: __init__.py  storage.py
symbiont/llms/: __init__.py
symbiont/middleware/: CustomCorsMiddleware.py  UserAuthVerify.py
symbiont/mongodb/: __init__.py  utils.py
symbiont/pinecone/: __init__.py  pc.py
symbiont/repositories/: plain_text_repo.py  study_resource_repo.py
symbiont/routers/: chat.py  llm_settings.py  resource.py  study.py  tests.py  text.py  user.py
symbiont/src/: __init__.py  main.py  models.py  utils.py
symbiont/src/fb/: __init__.py  storage.py
symbiont/src/llms/: __init__.py
symbiont/src/middleware/: UserAuthVerify.py
symbiont/src/pinecone/: __init__.py  pc.py
symbiont/src/routers/: chat.py  llm_settings.py  resource.py  study.py  study_test.py  summary.py  text.py  user.py
symbiont/src/scripts/: delete_pinecone_vecs.py
symbiont/src/utils/: db_utils.py  helpers.py  llm_utils.py  logger.py
symbiont/supertokens/: __init__.py
symbiont/tests/: test_delete_local_file.py  test_summarise_plain_text.py
symbiont/tests/chat/: test_delete_chat_messages.py  test_generate_llm_response.py  test_get_chat_messages.py  test_return_no_context_response.py  test_save_chat_messages_to_db.py
symbiont/tests/firebase/: test_fb_init.py
symbiont/tests/llms/: test_create_prompt.py  test_get_llm_settings.py  test_get_user_llm_settings.py  test_init_llm.py  test_set_llm_settings.py
symbiont/tests/middleware/: test_custom_cors_middleware.py  test_supertokens_auth_middleware.py  test_user_auth_middleware.py
symbiont/tests/study/: test_get_current_study.py
symbiont/tests/supertokens/: init_supertokens.py
symbiont/tests/vector_db/: test_create_vec_ref_in_db.py  test_get_vecs_from_db.py  test_qdrant.py  test_vector_store_context_init.py
symbiont/tests/vector_db/chat_context_service_class/: test_add_pdf_resource.py  test_add_web_resource.py  test_add_yt_resource.py  test_chat_context_service_init.py  test_reranker.py  (+4 more)
symbiont/tests/vector_repos/: test_milvus_repo.py  test_weaviate_repo.py
symbiont/utils/: db_utils.py  document_loaders.py  helpers.py  llm_utils.py  logger.py
symbiont/vector_dbs/: __init__.py  base_vector_repo_abc.py  chat_context_service.py  embeddings_service.py  models.py  reranker_service.py  vector_service.py  vector_store_context.py
symbiont/vector_dbs/vector_store_repos/: milvus_repo.py  qdrant_repo.py  weaviate_repo.py
