[tool.poetry]
name = "symbiont"
version = "0.1.0"
description = ""
authors = ["lonehegelian <thelonehegelian@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
fastapi = {extras = ["all"], version = "^0.109.2"}
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
firebase-admin = "^6.4.0"
langchain = "^0.1.7"
langchain-openai = "^0.0.6"
pinecone-client = "^3.0.3"
pypdf = "^4.0.2"
nltk = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
