[tool.poetry]
name = "symbiont"
version = "0.1.0"
description = ""
authors = ["lonehegelian <thelonehegelian@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
fastapi = {extras = ["all"], version = "^0.109.2"}
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
firebase-admin = "^6.4.0"
langchain = "^0.1.7"
langchain-openai = "^0.0.6"
pinecone-client = "^3.0.3"
pypdf = "^4.0.2"
nltk = "^3.8.1"
langchain-pinecone = "^0.0.2"
youtube-transcript-api = "^0.6.2"
pytube = "^15.0.0"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
unstructured = "^0.12.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
