[tool.poetry]
name = "symbiont"
version = "0.1.0"
description = ""
authors = ["lonehegelian <thelonehegelian@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
fastapi = {extras = ["all"], version = "^0.109.2"}
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
firebase-admin = "^6.4.0"
langchain = "^0.1.7"
langchain-openai = "^0.0.6"
pinecone-client = "^3.0.3"
pypdf = "^4.0.2"
nltk = "^3.8.1"
langchain-pinecone = "^0.0.2"
youtube-transcript-api = "^0.6.2"
pytube = "^15.0.0"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
unstructured = "^0.12.5"
playwright = "^1.41.2"
langchain-text-splitters = "^0.0.1"
cohere = "^4.53"
langchain-anthropic = "^0.1.4"
colorlog = "^6.8.2"
langchain-google-genai = "^0.0.11"
pillow = "^10.2.0"
langchain-voyageai = "^0.1.0"
anyio = "^4.3.0"
pytest-twisted = "^1.14.1"
twisted = "^24.3.0"
pymongo = "^4.6.3"
pymupdf = "^1.24.2"
pytest-mock = "^3.14.0"
langchain-weaviate = "^0.0.2"
torch = "^2.4.0"
pymilvus = "^2.4.5"
pytest-watch = "^4.2.0"


[tool.poetry.scripts]
delete_namespace = "scripts.delete_pinecone_vecs:main"
extract_todos = "scripts.extract_todos:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pre-commit = "^3.8.0"
pytest-asyncio = "^0.23.6"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"
mongomock = "^4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]

